# harmony-os

./: .gitattributes  .gitignore  9sltpmbtsskenjcjlncnn7sdsv9ctnij  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  deny.toml  flake.nix  justfile  manifest
.beads/: .gitignore  config.yaml  dolt-server.activity  metadata.json
.cargo/: config.toml
.github/workflows/: ci.yml
crates/harmony-athenaeum/: Cargo.toml
crates/harmony-athenaeum/src/: addr.rs  athenaeum.rs  book.rs  hash.rs  lib.rs
crates/harmony-boot/: Cargo.toml
crates/harmony-boot-aarch64/: Cargo.toml
crates/harmony-boot-aarch64/.cargo/: config.toml
crates/harmony-boot-aarch64/src/: bump_alloc.rs  cache.rs  fdt_parse.rs  gic.rs  main.rs  mmio.rs  mmu.rs  pe.rs  pl011.rs  platform.rs  rndr.rs  sched.rs  syscall.rs  timer.rs  vectors.rs
crates/harmony-boot/.cargo/: config.toml
crates/harmony-boot/src/: main.rs  pci.rs  pit.rs  syscall.rs
crates/harmony-boot/src/virtio/: mod.rs  net.rs  pci_cap.rs  virtqueue.rs
crates/harmony-boot/test-bins/: build.sh  hello.S  hello.elf
crates/harmony-hypervisor/: Cargo.toml
crates/harmony-hypervisor/blobs/: guest-virt.dtb
crates/harmony-hypervisor/dts/: guest-virt.dts
crates/harmony-hypervisor/src/: gic.rs  hypervisor.rs  lib.rs  stage2.rs  trap.rs  uart.rs  vcpu.rs  virtio_mmio.rs  virtio_net.rs  virtio_net_bridge.rs  virtqueue.rs  vmid.rs
crates/harmony-hypervisor/src/platform/: mod.rs  qemu_virt.rs  rpi5.rs
crates/harmony-microkernel/: Cargo.toml
crates/harmony-microkernel/benches/: buddy_alloc.rs  cap_tracker.rs  fid_tracker.rs  ipc_echo.rs  page_table.rs
crates/harmony-microkernel/src/: block_device.rs  cdc_net_device.rs  config_server.rs  content_server.rs  echo.rs  ecm_gadget_net_device.rs  fat32.rs  fat_server.rs  fid_tracker.rs  genet_server.rs  gpio_server.rs  guest_loader.rs  hardware_config.rs  hid_server.rs  hv_manager.rs  hv_server.rs  kernel.rs  key_hierarchy.rs  lib.rs  library_server.rs  mass_storage_block.rs  mass_storage_bus.rs  namespace.rs  nar.rs  net_device.rs  nix_store_server.rs  node_config.rs  pq_capability.rs  sd_server.rs  serial_server.rs  signed_config.rs  uart_server.rs  virtio_net_server.rs
crates/harmony-microkernel/src/integrity/: lyll.rs  mod.rs  nakaiah.rs  quarantine.rs
crates/harmony-microkernel/src/vm/: aarch64.rs  buddy.rs  cap_tracker.rs  manager.rs  mock.rs  mod.rs  page_table.rs  x86_64.rs
crates/harmony-microkernel/tests/: config_lifecycle.rs
crates/harmony-microkernel/tests/fixtures/: qemu-virt.dtb  rpi5-genet-no-mac.dtb  rpi5-genet-no-mac.dts  rpi5-genet.dtb  rpi5-genet.dts
crates/harmony-netstack/: Cargo.toml
crates/harmony-netstack/src/: builder.rs  config.rs  device.rs  dhcp.rs  lib.rs  peers.rs  stack.rs  tcp.rs  udp.rs
crates/harmony-os/: Cargo.toml
crates/harmony-os/benches/: elf_loader.rs  linuxulator.rs  nar_parse.rs
crates/harmony-os/src/: config_applicator.rs  disk_blob_store.rs  disk_book_store.rs  elf.rs  elf_loader.rs  embedded_fs.rs  lib.rs  linuxulator.rs  mesh_nar_source.rs  nar_publisher.rs  narinfo.rs  nix_base32.rs  nix_binary_cache.rs  nix_store_fetcher.rs  persistent_nar_store.rs  usb_book_store.rs
crates/harmony-os/tests/: dynamic_elf.rs
crates/harmony-os/tests/fixtures/: hello  ld-musl-aarch64.so.1
crates/harmony-test-elf/: Cargo.toml
crates/harmony-test-elf/.cargo/: config.toml
crates/harmony-test-elf/src/: main.rs
crates/harmony-unikernel/: Cargo.toml
crates/harmony-unikernel/benches/: event_loop.rs  node_routing.rs  register_bank.rs
crates/harmony-unikernel/src/: event_loop.rs  lib.rs  serial.rs
crates/harmony-unikernel/src/drivers/: console.rs  dma_pool.rs  dwc_usb.rs  font_8x16.rs  framebuffer.rs  genet.rs  gpio.rs  hid_boot.rs  input_event.rs  mass_storage.rs  mod.rs  nvme.rs  pl011.rs  register_bank.rs  sdhci.rs  spi_bus.rs  tpm.rs
crates/harmony-unikernel/src/drivers/cdc_ethernet/: codec.rs  descriptor.rs  mod.rs  ncm.rs  notification.rs
crates/harmony-unikernel/src/drivers/dwc2/: fifo.rs  mod.rs  regs.rs  types.rs
crates/harmony-unikernel/src/drivers/dwc_usb/: context.rs  mod.rs  ring.rs  trb.rs  types.rs
crates/harmony-unikernel/src/drivers/ecm_gadget/: descriptor.rs  mod.rs
crates/harmony-unikernel/src/platform/: entropy.rs  mod.rs  persistence.rs
deploy/: .gitignore  build-userspace.sh  busybox-aarch64  busybox-x86_64  dropbear-aarch64  dropbear-hostkey  dropbear-x86_64
docs/plans/: 2026-03-07-athenaeum-design.md  2026-03-07-athenaeum-plan.md  2026-03-08-lyll-nakaiah-design.md  2026-03-08-lyll-nakaiah-plan.md  2026-03-08-virtual-memory-design.md  2026-03-08-virtual-memory-plan.md  2026-03-09-network-stack-design.md  2026-03-09-network-stack-plan.md  2026-03-10-gpio-sd-driver-design.md  2026-03-10-gpio-sd-driver-plan.md  2026-03-10-pl011-uart-driver-design.md  2026-03-10-pl011-uart-driver-plan.md  2026-03-10-usb-ethernet-design.md  2026-03-10-usb-ethernet-plan.md  2026-03-11-fid-tracker-plan.md  2026-03-11-fs-syscalls-design.md  2026-03-11-fs-syscalls-plan.md  2026-03-11-musl-boot-support-design.md  2026-03-11-musl-boot-support-plan.md  2026-03-11-nix-store-bridge-design.md  2026-03-11-nix-store-bridge-plan.md  2026-03-12-lazy-nar-fetch-design.md  2026-03-12-lazy-nar-fetch-plan.md  2026-03-12-zenoh-nar-publish-design.md  2026-03-12-zenoh-nar-publish-plan.md  2026-03-18-nix-flake-dev-shell-design.md  2026-03-18-nix-flake-dev-shell-plan.md  2026-03-18-qemu-test-harness-design.md  2026-03-18-qemu-test-harness-plan.md  2026-03-19-key-hierarchy-design.md  2026-03-19-key-hierarchy-plan.md  2026-03-19-x86-kernel-stack-design.md  2026-03-19-x86-kernel-stack-plan.md  2026-03-20-nix-binary-cache-plan.md  2026-03-21-linuxulator-execve-plan.md  2026-03-21-linuxulator-fork-plan.md  2026-03-21-linuxulator-pipes-plan.md  2026-03-21-linuxulator-sockets-epoll-plan.md  2026-03-22-partial-mmap-plan.md  2026-03-22-signal-delivery-plan.md  (+9 more)
nixos/: archivist.nix  harmony-node-service.nix  luna.nix  rpi5-base.nix  sol.nix  terra.nix
scripts/: build-rpi5-image.sh  gen-musl-fixtures.sh
secrets/: secrets.nix
xtask/: Cargo.toml
xtask/src/: main.rs  (+2 more)
(+128 files in other folders)
