[workspace]
resolver = "2"
members = [
    "crates/harmony-unikernel",
    "crates/harmony-microkernel",
    "crates/harmony-os",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"
repository = "https://github.com/zeblithic/harmony-os"
rust-version = "1.75"

[workspace.dependencies]
# Ring 0 — harmony core (consumed under MIT license arm)
harmony-crypto = { git = "https://github.com/zeblithic/harmony.git" }
harmony-identity = { git = "https://github.com/zeblithic/harmony.git" }
harmony-reticulum = { git = "https://github.com/zeblithic/harmony.git" }
harmony-zenoh = { git = "https://github.com/zeblithic/harmony.git" }
harmony-content = { git = "https://github.com/zeblithic/harmony.git" }
harmony-compute = { git = "https://github.com/zeblithic/harmony.git" }
harmony-workflow = { git = "https://github.com/zeblithic/harmony.git" }
# Note: harmony-node is a binary crate (no lib target), not usable as a dependency

# Internal workspace crates
harmony-unikernel = { path = "crates/harmony-unikernel" }
harmony-microkernel = { path = "crates/harmony-microkernel" }
harmony-os = { path = "crates/harmony-os" }
