[workspace]
resolver = "2"
members = [
    "crates/harmony-unikernel",
    "crates/harmony-microkernel",
    "crates/harmony-os",
]
# harmony-boot is excluded from the workspace because it targets bare metal
# (x86_64-unknown-none) and Cargo's workspace feature unification would force
# std features on its no_std dependencies. Build it via `cargo xtask` or
# `cargo check -p harmony-boot --target x86_64-unknown-none` from crates/harmony-boot/.
exclude = ["crates/harmony-boot", "xtask"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"
repository = "https://github.com/zeblithic/harmony-os"
rust-version = "1.75"

[workspace.dependencies]
# Ring 0 — harmony core (consumed under MIT license arm)
# default-features = false so bare-metal crates can consume without std;
# members that need std re-enable via features = ["std"].
harmony-crypto = { git = "https://github.com/zeblithic/harmony.git", branch = "main", default-features = false }
harmony-identity = { git = "https://github.com/zeblithic/harmony.git", branch = "main", default-features = false }
harmony-platform = { git = "https://github.com/zeblithic/harmony.git", branch = "main", default-features = false }
harmony-reticulum = { git = "https://github.com/zeblithic/harmony.git", branch = "main", default-features = false }
harmony-zenoh = { git = "https://github.com/zeblithic/harmony.git", branch = "main" }
harmony-content = { git = "https://github.com/zeblithic/harmony.git", branch = "main" }
harmony-compute = { git = "https://github.com/zeblithic/harmony.git", branch = "main" }
harmony-workflow = { git = "https://github.com/zeblithic/harmony.git", branch = "main" }
# Note: harmony-node is a binary crate (no lib target), not usable as a dependency

# Internal workspace crates
harmony-unikernel = { path = "crates/harmony-unikernel", default-features = false }
harmony-microkernel = { path = "crates/harmony-microkernel" }
harmony-os = { path = "crates/harmony-os" }
harmony-athenaeum = { git = "https://github.com/zeblithic/harmony.git", branch = "main", default-features = false }

# Shared dependencies
rand_core = { version = "0.6", default-features = false }
