[workspace]
resolver = "2"
members = [
    "crates/harmony-unikernel",
    "crates/harmony-microkernel",
    "crates/harmony-os",
    "crates/harmony-netstack",
]
# harmony-boot is excluded from the workspace because it targets bare metal
# (x86_64-unknown-none) and Cargo's workspace feature unification would force
# std features on its no_std dependencies. Build it via `cargo xtask` or
# `cargo check -p harmony-boot --target x86_64-unknown-none` from crates/harmony-boot/.
exclude = ["crates/harmony-boot", "crates/harmony-boot-aarch64", "crates/harmony-test-elf", "xtask"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"
repository = "https://github.com/zeblithic/harmony-os"
rust-version = "1.75"

[workspace.dependencies]
# Ring 0 — harmony core (consumed under MIT license arm)
# default-features = false so bare-metal crates can consume without std;
# members that need std re-enable via features = ["std"].
harmony-crypto = { git = "https://github.com/zeblithic/harmony.git", branch = "main", default-features = false }
harmony-identity = { git = "https://github.com/zeblithic/harmony.git", branch = "main", default-features = false }
harmony-platform = { git = "https://github.com/zeblithic/harmony.git", branch = "main", default-features = false }
harmony-reticulum = { git = "https://github.com/zeblithic/harmony.git", branch = "main", default-features = false }
harmony-zenoh = { git = "https://github.com/zeblithic/harmony.git", branch = "main" }
harmony-content = { git = "https://github.com/zeblithic/harmony.git", branch = "main" }
harmony-compute = { git = "https://github.com/zeblithic/harmony.git", branch = "main" }
harmony-workflow = { git = "https://github.com/zeblithic/harmony.git", branch = "main" }
harmony-athenaeum = { git = "https://github.com/zeblithic/harmony.git", branch = "main", default-features = false }
# Note: harmony-node is a binary crate (no lib target), not usable as a dependency

# Internal workspace crates
harmony-unikernel = { path = "crates/harmony-unikernel", default-features = false }
harmony-microkernel = { path = "crates/harmony-microkernel", default-features = false }
harmony-os = { path = "crates/harmony-os" }

# Benchmark framework
criterion = { version = "0.5", features = ["html_reports"] }

# Shared dependencies
bitflags = "2"
rand_core = { version = "0.6", default-features = false }
# Note: keccak 0.2.0-rc.2 is pinned via Cargo.lock (now committed).
# The stable keccak 0.2.0 removed KeccakP1600 which sha3 0.11.0-rc.8
# (transitive dep via ml-dsa/ml-kem in harmony core) requires.
# If you run `cargo update`, verify keccak stays at 0.2.0-rc.2:
#   cargo update keccak --precise 0.2.0-rc.2
