[package]
name = "harmony-athenaeum"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "32-bit content-addressed chunk system for on-device memory"

[features]
default = ["std"]
std = []

[dependencies]
sha2 = { version = "0.10", default-features = false }
