[package]
name = "harmony-boot-aarch64"
description = "Ring 1: aarch64 boot stub for Harmony unikernel (QEMU virt target)"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "GPL-2.0-or-later"
repository = "https://github.com/zeblithic/harmony-os"

# Excluded from workspace — bare-metal target requires independent feature resolution
# to avoid std feature unification with host-target workspace members.
# Empty [workspace] table prevents Cargo from searching parent directories
# for a workspace root (needed when building from git worktrees).
[workspace]

[dependencies]
linked_list_allocator = "0.10"
fdt = { version = "0.1", default-features = false }

harmony-unikernel = { path = "../harmony-unikernel", default-features = false }
harmony-identity = { git = "https://github.com/zeblithic/harmony.git", branch = "main", default-features = false }
harmony-platform = { git = "https://github.com/zeblithic/harmony.git", branch = "main", default-features = false }
harmony-microkernel = { path = "../harmony-microkernel", default-features = false }
harmony-os = { path = "../harmony-os", default-features = false }

sha2 = { version = "0.10", default-features = false, features = ["force-soft"] }

# Pin keccak pre-release: sha3 0.11.0-rc.8 needs KeccakP1600 + p1600 which
# were removed in keccak 0.2.0 (stable). Cargo won't select an rc unless
# explicitly pinned. This crate is excluded from the workspace so the root
# Cargo.lock pin doesn't apply here.
keccak = "=0.2.0-rc.2"

# Force pure Rust BLAKE3 — cross-compiling for aarch64-unknown-uefi has no
# system libc headers, so the C NEON backend fails to build.
blake3 = { version = "1", default-features = false, features = ["no_neon"] }

# uefi crate is only needed on the UEFI target.  We provide our own
# #[global_allocator] (LockedHeap) and #[panic_handler] (PL011 serial)
# instead of the uefi crate's features, which don't work after ExitBootServices.
[target.'cfg(target_os = "uefi")'.dependencies]
uefi = { version = "0.36" }

[features]
default = ["qemu-virt"]
qemu-virt = []
rpi5 = []
apple-silicon = ["page-16k"]
page-16k = ["harmony-microkernel/page-16k"]
