[package]
name = "harmony-boot"
description = "Ring 1: x86_64 boot stub for Harmony unikernel (QEMU target)"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"
repository = "https://github.com/zeblithic/harmony-os"

# Excluded from workspace — bare-metal target requires independent feature resolution
# to avoid std feature unification with host-target workspace members.

[dependencies]
harmony-unikernel = { path = "../harmony-unikernel", default-features = false }
harmony-identity = { git = "https://github.com/zeblithic/harmony.git", branch = "main", default-features = false }
harmony-platform = { git = "https://github.com/zeblithic/harmony.git", branch = "main", default-features = false }
harmony-netstack = { path = "../harmony-netstack", default-features = false }
smoltcp = { version = "0.11", default-features = false, features = ["medium-ethernet", "proto-ipv4", "socket-udp", "alloc"] }
bootloader_api = "0.11"
linked_list_allocator = "0.10"
x86_64 = { version = "0.15", default-features = false, features = ["instructions", "abi_x86_interrupt"] }

# Ring 2 microkernel (optional — only with `ring2` feature)
harmony-microkernel = { path = "../harmony-microkernel", default-features = false, optional = true }

# Ring 3 OS layer (optional — only with `ring3` feature)
harmony-os = { path = "../harmony-os", default-features = false, optional = true }

# Force software crypto — cross-compiling from aarch64 to x86_64-unknown-none
# causes LLVM crashes with hardware-accelerated SHA and Poly1305 backends.
sha2 = { version = "0.10", default-features = false, features = ["force-soft"] }

# Pin keccak pre-release: sha3 0.11.0-rc.8 needs KeccakP1600 + p1600 which
# were removed in keccak 0.2.0 (stable). Cargo won't select an rc unless
# explicitly pinned. This crate is excluded from the workspace so the root
# Cargo.lock pin doesn't apply here.
keccak = "=0.2.0-rc.2"

[features]
default = []
# Gate the QEMU isa-debug-exit call so real boots enter the event loop.
qemu-test = []
# Ring 2 microkernel IPC demo on boot.
ring2 = ["dep:harmony-microkernel"]
# Ring 3 Linuxulator — run Linux binaries via syscall translation.
ring3 = ["ring2", "dep:harmony-os"]
