[package]
name = "harmony-microkernel"
description = "Ring 2: Microkernel with 9P IPC, capability enforcement, process isolation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["kernel"]
std = [
    "harmony-unikernel/std",
    "harmony-crypto/std",
    "harmony-identity/std",
    "harmony-platform/std",
]
# Kernel struct + IPC dispatch. Requires in-memory identity stores from
# harmony-identity/test-utils (production-grade despite the feature name).
kernel = ["std", "harmony-identity/test-utils"]

[dependencies]
# Ring 1
harmony-unikernel = { workspace = true }

# Ring 0 — protocol crates needed at the kernel level
harmony-crypto = { workspace = true }
harmony-identity = { workspace = true }
harmony-platform = { workspace = true }

[dev-dependencies]
