[package]
name = "harmony-microkernel"
description = "Ring 2: Microkernel with 9P IPC, capability enforcement, process isolation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["kernel"]
std = [
    "harmony-unikernel/std",
]
# Kernel struct + IPC dispatch. Requires in-memory identity stores from
# harmony-identity/test-utils (production-grade despite the feature name).
kernel = [
    "std",
    "dep:harmony-crypto", "harmony-crypto/std",
    "dep:harmony-identity", "harmony-identity/std", "harmony-identity/test-utils",
    "dep:harmony-platform", "harmony-platform/std",
    "dep:harmony-athenaeum", "harmony-athenaeum/std",
]

[dependencies]
# Ring 1
harmony-unikernel = { workspace = true }

# Ring 0 — protocol crates, only needed for kernel IPC dispatch
harmony-crypto = { workspace = true, optional = true }
harmony-identity = { workspace = true, optional = true }
harmony-platform = { workspace = true, optional = true }
harmony-athenaeum = { workspace = true, optional = true }

[dev-dependencies]
