[package]
name = "harmony-microkernel"
description = "Ring 2: Microkernel with 9P IPC, capability enforcement, process isolation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["kernel"]
std = [
    "harmony-unikernel/std",
]
# 16 KiB page granule for aarch64 targets (Apple Silicon, etc.).
# Switches PAGE_SIZE from 4096 to 16384 at compile time.
page-16k = []

# Kernel struct + IPC dispatch. Requires in-memory identity stores from
# harmony-identity/test-utils (production-grade despite the feature name).
kernel = [
    "std",
    "dep:harmony-crypto", "harmony-crypto/std",
    "dep:harmony-identity", "harmony-identity/std", "harmony-identity/test-utils",
    "dep:harmony-platform", "harmony-platform/std",
    "dep:harmony-athenaeum", "harmony-athenaeum/std", "harmony-athenaeum/serde",
    "dep:rand_core",
    "dep:serde",
    "dep:ciborium",
]

[dependencies]
# Ring 1
harmony-unikernel = { workspace = true }
bitflags = { workspace = true }

# Ring 0 — protocol crates, only needed for kernel IPC dispatch
harmony-crypto = { workspace = true, optional = true }
harmony-identity = { workspace = true, optional = true }
harmony-platform = { workspace = true, optional = true }
harmony-athenaeum = { workspace = true, optional = true }
rand_core = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
ciborium = { workspace = true, optional = true }

[dev-dependencies]
harmony-unikernel = { workspace = true, features = ["test-utils"] }
criterion = { workspace = true }
rand = { version = "0.8", features = ["std"] }
fdt = "0.1"

[[bench]]
name = "buddy_alloc"
harness = false

[[bench]]
name = "page_table"
harness = false

[[bench]]
name = "fid_tracker"
harness = false

[[bench]]
name = "ipc_echo"
harness = false

[[bench]]
name = "cap_tracker"
harness = false
