[package]
name = "harmony-os"
description = "Ring 3: Full Harmony OS with Linux ABI compatibility, DDE, declarative config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = [
    "harmony-microkernel/kernel",
    "dep:harmony-crypto", "harmony-crypto/std",
    "dep:harmony-identity", "harmony-identity/std",
    "dep:harmony-reticulum", "harmony-reticulum/std",
    "dep:harmony-zenoh",
    "dep:harmony-content",
    "dep:harmony-compute",
    "dep:harmony-workflow",
    "dep:ureq",
    "dep:xz2",
    "dep:sha2",
    "dep:hex",
]

[dependencies]
# Ring 2 — base types (Fid, FileServer, IpcError) are always available
harmony-microkernel = { workspace = true, default-features = false }

# Ring 0 — full protocol stack, only with std
harmony-crypto = { workspace = true, optional = true }
harmony-identity = { workspace = true, optional = true }
harmony-reticulum = { workspace = true, optional = true }
harmony-zenoh = { workspace = true, optional = true }
harmony-content = { workspace = true, optional = true }
harmony-compute = { workspace = true, optional = true }
harmony-workflow = { workspace = true, optional = true }

# Lazy NAR fetch (Layer 4) — Ring 3 only
ureq = { version = "3", optional = true }
xz2 = { version = "0.1", optional = true }
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }

[dev-dependencies]
harmony-identity = { workspace = true, features = ["std"] }
harmony-unikernel = { workspace = true, features = ["std"] }
