[package]
name = "harmony-unikernel"
description = "Ring 1: Bootable single-purpose Harmony node (bare metal / hypervisor)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Ring 0 — harmony protocol core (no_std when std feature disabled)
harmony-crypto = { workspace = true }
harmony-identity = { workspace = true }
harmony-platform = { workspace = true }
harmony-reticulum = { workspace = true }
rand_core = { workspace = true }
tpm2-protocol = { workspace = true }

[features]
default = ["std"]
std = [
    "harmony-crypto/std",
    "harmony-identity/std",
    "harmony-platform/std",
    "harmony-reticulum/std",
]
test-utils = []

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "event_loop"
harness = false
required-features = ["std"]

[[bench]]
name = "register_bank"
harness = false
required-features = ["test-utils"]

[[bench]]
name = "node_routing"
harness = false
required-features = ["std"]
